# ARCSynthTasks

./: .gitignore  .python-version  README.md  app.py  main.py  pyproject.toml  validation.py
data/synthetic_tasks/: I009d5c81_28bf18c6.json  I0ca9ddb6_dc1df850.json  I184a9768_228f6490.json  I1c56ad9f_c9e6f938.json  I1f876c06_77fdfe62.json  I1fad071e_e9614598.json  I22168020_4258a5f9.json  I234bbc79_4c4377d9.json  I239be575_017c7c7b_1f642eb9.json  I2b01abd0_c444b776.json  I2bcee788_ed36ccf7.json  I2c608aff_e98196ab.json  I3194b014_0a938d79_29ec7d0e.json  I3de23699_caa06a1f.json  I4093f84a_28e73c20.json  I423a55dc_963e52fc.json  I516b51b7_25d8a9c8.json  I52fd389e_ce22a75a_d511f180.json  I55783887_ce22a75a_88a10436.json  I5d2a5c43_8d5021e8.json  I626c0bcc_5c2c9af4.json  I66e6c45b_e9614598.json  I6855a6e4_b94a9452.json  I73c3b0d8_22233c11.json  I7bb29440_d89b689b_d2abd087.json  I7ee1c6ea_ea786f4a_97a05b5b.json  I834ec97d_4258a5f9.json  I8cb8642d_bdad9b1f.json  I8d510a79_42a50994_28e73c20.json  I9110e3c5_2013d3e2_e76a88a6.json  I963e52fc_5ad4f10b.json  I9ddd00f0_e179c5f4.json  Iac0a08a4_48d8fb45.json  Iaedd82e4_7b6016b9.json  Ib27ca6d3_e73095fd_88a10436.json  Iba97ae07_9565186b.json  Ic92b942c_6f8cd79b.json  Icce03e0d_e9614598.json  Ice8d95cc_e26a3af2.json  Id282b262_6455b5f5.json  (+41 more)
src/: sampler.py  synthesizer.py  task_generator.py  utils.py  validator.py
