[tool.poetry]
name = "arcsynthtasks"
version = "0.1.0"
description = ""
authors = ["abhitopia <abhitopia@isme.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.5"
numpy = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
